--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <ul>
         <li>
-            <a class="active" href="navigation.html">Home</a>
+            <a class="active" href="index.html">Home</a>
         </li>
         <li>
             <a href="about.html">About Us</a>
